--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
-flask
-coc.py
+aiohttp==3.9.1
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+blinker==1.7.0
+-e git+ssh://git@github.com/hunterros-s/clan-manager.git@74815b23d538f5c23549edf75bdd272f08060c2d#egg=clanmanager&subdirectory=clanmanager
+click==8.1.7
+coc.py==3.0.0
+Flask==3.0.0
+frozenlist==1.4.1
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+multidict==6.0.4
+ujson==5.9.0
+Werkzeug==3.0.1
+yarl==1.9.4
